[gd_scene load_steps=41 format=2]

[ext_resource path="res://Graphics/characters/Zombie/Death.png" type="Texture" id=1]
[ext_resource path="res://Graphics/characters/Zombie/Attack.png" type="Texture" id=2]
[ext_resource path="res://Graphics/characters/Zombie/Idle.png" type="Texture" id=3]
[ext_resource path="res://Graphics/characters/Zombie/Walk.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Zombie.gd" type="Script" id=5]
[ext_resource path="res://Hurtbox_Hitbox/HurtBox.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 4 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 4 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 4 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=91]
animations = [ {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "side_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "side_death",
"speed": 5.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "side_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "side_walk",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=92]
radius = 9.0

[sub_resource type="CircleShape2D" id=93]
radius = 50.0

[sub_resource type="CapsuleShape2D" id=94]
height = 10.0

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 91 )
animation = "side_walk"
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 8 )
shape = SubResource( 92 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 93 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 2, 3 )
shape = SubResource( 94 )

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
